# CacheRequests

./: .gitignore  MANIFEST.in  cache_requests.test.py  pyproject.toml  readme.md  setup.py
.github/workflows/: workflow.yml
CacheRequests/: __init__.py  cloudscraper.py  path.py  response.py  session.py  session.pyi
cached_requests/: cloudscraper.py  response.py  session.py  session.pyi  urlmap.py  utils.py
